[project]
name = "ing-ynab"
version = "0.3.0"
description = "Import your ING Germany bank statements via FinTS into YNAB."
authors = [{ name = "Arne Bahlo", email = "hey@arne.me" }]
dependencies = ["requests", "fints>=4.0.0"]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.resolution]
allow-prereleases = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.python.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = ["pytest", "ruff"]

[tool.pdm.scripts]
start = { shell = "cd src && python -m ing_ynab" }
